@@ -1,5 +1,7 @@
 *SVN*
 
+* Update to Prototype 1.5.0_pre1 [Sam Stephenson]
+
 * Update to script.aculo.us 1.6 [Thomas Fuchs]
 
 * Add an integration_test generator [Jamis Buck]
